--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,17 +25,10 @@
 
           <div class="footer">
             <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
+             FB | twitter | Contact | Give Back
             </div>
             <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
+              <p>FGGC Onitsha © 2014   All Rights Reserved</p>
             </div>
           </div>
         </div>
