--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+  {% include head.html %}
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+  <body>
 
-    </head>
-    <body>
+    {% include header.html %}
+    {% include sidebar.html %}
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-             FB | twitter | Contact | Give Back
-            </div>
-            <div class="contact">
-              <p>FGGC Onitsha © 2014   All Rights Reserved</p>
-            </div>
-          </div>
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+    <div class="wrap">
+      <div class="masthead">
+        <div class="container">
+          <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+          {% if page.title == "Home" %}
+          <h1 class="masthead-title">
+            <a href="/" title="Home">Welcome </a>
+          </h1>
+          {% else %}
+          {% endif %}
         </div>
+      </div>
 
-    </body>
+      <div class="container content">
+        {{ content }}
+      </div>
+    </div>
+
+  </body>
 </html>
