--- a/css/main.css
+++ b/css/main.css
@@ -1,160 +1,96 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
-
-/* Global Reset */
 * {
-  margin: 0;
-  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body { height: 100%; }
+a {
+  text-decoration: none;
+  color: rgb(142, 142, 214);
+}
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
 
-body {
-  background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
+/* LAYOUT CSS */
+#layout {
+  padding-left: 25%; /* "left col (nav + list)" width */
+  position: relative;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  text-align: right;
+  bottom: 0;
+  width: 25%;
+  margin-left: -25%;
+}
+
+header {
+  -webkit-font-smoothing: antialiased;
+  font-family: "atrament-web", "proxima-nova-extra-condensed", Helvetica, Arial, sans-serif;
+  font-size: 1.8em;
+  margin: 2em;
   text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
-
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
-
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
-
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+.content {
+  padding: 2em;
 }
 
-.posts li {
-  line-height: 1.75em;
+.post {
+  padding-bottom: 2em;
 }
-
-.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+.post-title {
+  font-size: 2em;
+  color: #222;
+  margin-bottom: 0.2em;
 }
-
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-
-.site {
-  font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
-}
-
-.header a {
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.title {
-  display: inline-block;
-  margin-bottom: 2em;
-}
-
-.title a {
-  color: #a00;
-}
-
-.title a:hover {
-  color: #000;
-}
-
-.header a.extra {
-  color: #aaa;
+.post-avatar {
+  border-radius: 50px;
+  float: right;
   margin-left: 1em;
 }
-
-.header a.extra:hover {
-  color: #000;
+.post-description {
+  font-family: Georgia, "Cambria", serif;
+  color: #444;
+  line-height: 1.8em;
 }
-
-.meta {
-  color: #aaa;
+.post-meta {
+  color: #999;
+  font-size: 90%;
+  margin: 0;
 }
 
 .footer {
+  text-align: center;
+  padding: 1em 0;
+}
+.footer a {
+  color: #ccc;
   font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
+}
+.footer .pure-menu a:hover,
+.footer .pure-menu a:focus {
+  background: none;
 }
 
-.footer .contact {
-  float: left;
-  margin-right: 3em;
+@media (max-width: 767px) {
+    .sidebar {
+        width: 100%;
+        position: relative;
+        margin: 0;
+    }
+
+    #layout {
+        padding: 1em;
+    }
 }
 
-.footer .contact a {
-  color: #8085C1;
-}
-
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.footer .rss img {
-  border: 0;
-}
-
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-
-/* standard */
-.post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
-}
-
-.post ul, .post ol {
-  margin-left: 1.35em;
-}
-
-.post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
-}
-
-.post pre code {
-  border: none;
-}
-
-/* terminal */
-.post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
-}
-
-.post pre.terminal code {
-  background-color: #333;
+@media (max-width: 480px) {
+    .content {
+        padding: 1em;
+    }
 }
