--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,21 +5,20 @@
 
   <body>
 
-    {% include header.html %}
-    {% include sidebar.html %}
-
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
+    <div class="wrap">      
       <div class="masthead">
         <div class="container">
-          <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+          {% include header.html %}          
+          <!-- <label for="sidebar-checkbox" class="sidebar-toggle"></label> -->
           {% if page.title == "Home" %}
-          <h1 class="masthead-title">
+          <!-- <h1 class="masthead-title">
             <a href="/" title="Home">Welcome </a>
-          </h1>
+          </h1> -->
           {% else %}
           {% endif %}
+          {% include menu.html %}
         </div>
       </div>
 
@@ -27,6 +26,6 @@
         {{ content }}
       </div>
     </div>
-
+    {% include footer.html %}
   </body>
 </html>
