--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
-<div>
-  <img src="fggc.gif">
-  <div>
-    <h1>Federal Governments Girls College</h1>    
-  </div>
+<header>
+  <img src="../fggc.gif">
+  <h1>Federal Governments Girls College</h1>    
   <h2>Onitsha</h2>
   <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
-</div>
+</header>
