--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,9 @@
 <header>
-  <img src="../fggc.gif">
+	{% if node.title == "Home" %}
+	  <img src="../fggc.gif">
+	{% else %}
+		<img src="../../fggc.gif">
+	{% endif %}
   <h1>Federal Governments Girls College</h1>    
   <h2>Onitsha</h2>
   <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
