--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,16 +4,31 @@
     <p>{{ site.description }}</p>
   </div> -->
 
-  <nav class="menu-nav">
-    <a class="menu-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
+  <nav class="pure-menu pure-menu-open pure-menu-horizontal">
+    <ul>
+      {% assign pages_list = site.pages %}
+        {% for node in pages_list %}
+          {% if node.title != null %}
+            {% if node.layout == "page" %}
+              <li>
+                <a class="menu-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+              </li>
+
+            {% endif %}
+        {% endif %}
+      {% endfor %}
+    </ul>
+
+    <!-- <a class="menu-nav-item{% if page.title == "Home" %} active{% endif %}" href="/">Home</a>
 
     {% assign pages_list = site.pages %}
     {% for node in pages_list %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
+
           <a class="menu-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
-    {% endfor %}
+    {% endfor %} -->
   </nav>
 </div>
