--- a/css/main.css
+++ b/css/main.css
@@ -29,11 +29,17 @@ a:focus {
 }
 
 header {
+}
+
+header h1 {
   -webkit-font-smoothing: antialiased;
-  font-family: "atrament-web", "proxima-nova-extra-condensed", Helvetica, Arial, sans-serif;
-  font-size: 1.8em;
-  margin: 2em;
-  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.4em;
+  display: inline-block;
+  width: 200px;
+}
+.pure-menu.pure-menu-horizontal {
+  background-color: pink;
 }
 
 .content {
