--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,6 +6,7 @@
 
   <nav class="pure-menu pure-menu-open pure-menu-horizontal">
     <ul>
+      <li><a href="../index.html">Home</a></li>
       {% assign pages_list = site.pages %}
         {% for node in pages_list %}
           {% if node.title != null %}
