added some styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,16 @@
 <header>
+	<div>
 	{% if node.title == "Home" %}
 	  <img src="../fggc.gif">
 	{% else %}
 		<img src="../../fggc.gif">
 	{% endif %}
-  <h1>Federal Governments Girls College</h1>    
-  <h2>Onitsha</h2>
-  <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
+	</div>
+	<div>
+	  <h1>Federal Governments Girls College</h1>
+	</div>
+	<div>
+	  <h2>Onitsha</h2>
+	  <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
+	</div>
 </header>
