--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,19 @@
 <header>
 	<div>
 	{% if node.title == "Home" %}
-	  <img src="../fggc.gif">
+	  <img src="../fggc.png">
 	{% else %}
-		<img src="../../fggc.gif">
+		<img src="../../fggc.png">
 	{% endif %}
 	</div>
 	<div>
-	  <h1>Federal Governments Girls College</h1>
+	  <h1>FEDERAL</h1>
+	  <h1>GOVERNMENTS</h1>
+	  <h1>GIRLS</h1>
+	  <h1>COLLEGE</h1>
 	</div>
 	<div>
-	  <h2>Onitsha</h2>
+	  <h2>ONITSHA</h2>
 	  <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
 	</div>
 </header>
