--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,16 @@
 
 body {
   background-color: #e4ded7;
+  color: #443a38;
+  font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
 }
 a {
   text-decoration: none;
-  color: rgb(142, 142, 214);
+  color: #color: #fff;
 }
 a:hover,
 a:focus {
-  text-decoration: underline;
+  background-color: #443a38;
 }
 
 /* LAYOUT CSS */
@@ -49,21 +51,37 @@ header img, header h1, header h2, header h3 {
 }
 header h1 {
   font-size: 1.75em;
-  width: 170px;
 }
 header h2 { font-size: 4.8em; padding-top: 20px; }
 header h3 { text-align: center; font-size: 1em }
 
 .pure-menu.pure-menu-horizontal {
-  background-color: pink;
+  background-color: #ff6502;
+  height: 50px;
+  border-bottom: 4px solid #443a38;
 }
 
+.pure-menu.pure-menu-horizontal a {
+  -webkit-font-smoothing: antialiased;
+  background-color: #ff6502;
+  height: 46px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  font-weight: 800;
+  letter-spacing: 0.075em;
+  padding-top: 12px;
+  color: #fff;
+}
+
+.pure-menu.pure-menu-horizontal a:hover {
+  background-color: #443a38;
+}
 .content {
   padding: 2em;
 }
 
 .container {
-  max-width: 40em;
+  max-width: 46em;
 }
 .post {
   padding-bottom: 2em;
