more style stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
 	{% endif %}
 	</div>
 	<div>
-	  <h1>FEDERAL</h1>
-	  <h1>GOVERNMENTS</h1>
-	  <h1>GIRLS</h1>
-	  <h1>COLLEGE</h1>
+	  <h1><a href="/">FEDERAL</a></h1>
+	  <h1><a href="/">GOVERNMENTS</a></h1>
+	  <h1><a href="/">GIRLS</a></h1>
+	  <h1><a href="/">COLLEGE</a></h1>
 	</div>
 	<div>
 	  <h2>ONITSHA</h2>
