--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
 <div class="menu" id="menu">
   <nav class="pure-menu pure-menu-open pure-menu-horizontal">
     <ul>
-      <li><a href="../index.html">Home</a></li>
+      <li><a href="http://fggconitsha.github.io/">Home</a></li>
       {% assign pages_list = site.pages %}
         {% for node in pages_list %}
           {% if node.title != null %}
@@ -10,7 +10,6 @@
               <li>
                 <a class="menu-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
               </li>
-
             {% endif %}
         {% endif %}
       {% endfor %}
