--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
-    <div id="layout">      
-      <div class="main">
+    <div id="page-wrap">      
+      <!-- <div class="main"> -->
         <div class="container">
           {% include header.html %}          
           <!-- <label for="sidebar-checkbox" class="sidebar-toggle"></label> -->
@@ -16,7 +16,7 @@
           {{ content }}
           {% include footer.html %}
         </div>
-      </div>
+      <!-- </div> -->
     </div>
   </body>
 </html>
