--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,6 @@
 <header>
 	<div>
-	{% if node.title == "Home" %}
-	  <img src="../fggc.png">
-	{% else %}
-		<img src="../../fggc.png">
-	{% endif %}
+	  <img src="http://fggconitsha.github.io/fggc.png">
 	</div>
 	<div>
 	  <h1><a href="/">FEDERAL</a></h1>
