--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,7 @@ header h3 {
   font-weight: 800;
   letter-spacing: 0.075em;
   padding-top: 10px;
+  margin-right: -4px;
   color: #fff;
 }
 
@@ -184,6 +185,7 @@ footer {
   vertical-align: bottom;
   text-align: center;
   padding: 1em 0;
+  margin-bottom: -100px;
   background-color: #a49d9d;
 }
 footer a {
@@ -196,19 +198,14 @@ footer .pure-menu a:focus {
 }
 
 @media (max-width: 767px) {
-    .sidebar {
-        width: 100%;
-        position: relative;
-        margin: 0;
-    }
-
-    #layout {
-        padding: 1em;
-    }
+  .pure-menu-horizontal li {
+    display: block;
+    background-color: #ff6502;
+  }
 }
 
 @media (max-width: 480px) {
-    .content {
-        padding: 1em;
-    }
+  .content {
+    padding: 1em;
+  }
 }
