a bit of poetry

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,15 @@
 <footer>
-	<a href="https://twitter.com/fggcoshaalumni">
-		<i class="fa fa-twitter">twitter</i>
-	</a>
-	<a href="https://www.facebook.com/groups/158911857461950/">
-		<i class="fa fa-facebook-square">facebook</i>
-	</a>
-	<a href="https://github.com/fggconitsha/fggconitsha.github.io">
-		<i class="fa fa-github-alt">github</i>
-	</a><br>
+	<p><a href="mailto:ify@gmail.com">Stay in touch</a></p>
+	<p>
+		<a href="https://twitter.com/fggcoshaalumni">
+			<i class="fa fa-twitter"> twitter </i>
+		</a> - 
+		<a href="https://www.facebook.com/groups/158911857461950/">
+			<i class="fa fa-facebook-square"> facebook </i>
+		</a> - 
+		<a href="https://github.com/fggconitsha/fggconitsha.github.io">
+			<i class="fa fa-github-alt"> github </i>
+		</a>
+	</p>
   <small>FGGC Onitsha  © 2014	 All Rights Reserved</small>
 </footer>
