--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
+      {{ site.title }} &middot; Onitsha
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="/public/css/lanyon.css"> -->
   <link rel="stylesheet" href="/css/pure-min.css">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/jquery.bxslider.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   
   <!-- Icons -->
