--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,4 +19,23 @@
       <!-- </div> -->
     </div>
   </body>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script src="/scripts/jquery.bxslider.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.bxslider').bxSlider({
+        // mode: 'vertical',
+        // adaptiveHeight: true,
+        auto: true,
+        speed: 2000,
+        hideControlOnEnd: true,
+        // autoControls: true,
+        autoControlsCombine: true,
+        pause: 6000,
+        easing: 'ease-out',
+        captions: true,
+        autoHover: true
+      });
+    });
+  </script>
 </html>
