Added Posts for Home page
Added posts for Reunion, Monthly Meeting and School Bus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,7 @@ layout: default
             <small>{{ post.date | date_to_string }}</small>
           </a>
         </h3>
+        <p>{{ post.excerpt }}</p>
       </li>
     {% endfor %}
   </ul>
