--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,13 @@
 <footer>
-	<p><a href="mailto:ify@gmail.com">Stay in touch</a></p>
 	<p>
 		<a href="https://twitter.com/fggcoshaalumni">
-			<i class="fa fa-twitter"> twitter </i>
+			<i class="fa fa-envelope"></i>
+		</a>
+		<a href="https://twitter.com/fggcoshaalumni">
+			<i class="fa fa-twitter"></i>
 		</a>
 		<a href="https://www.facebook.com/groups/158911857461950/">
-			- <i class="fa fa-facebook-square"> facebook </i> - 
-		</a>
-		<a href="https://github.com/fggconitsha/fggconitsha.github.io">
-			<i class="fa fa-github-alt"> github </i>
+			<i class="fa fa-facebook-square"></i>
 		</a>
 	</p>
   <small>FGGC Onitsha  © 2014	 All Rights Reserved</small>
