--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 	</div>
 	<div>
 	  <h1><a href="/">FEDERAL</a></h1>
-	  <h1><a href="/">GOVERNMENTS</a></h1>
+	  <h1><a href="/">GOVERNMENT</a></h1>
 	  <h1><a href="/">GIRLS</a></h1>
 	  <h1><a href="/">COLLEGE</a></h1>
 	</div>
