--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ header h1 {
 header h1 a {
   color: #443a38;
   padding-left: 4px;
-  background-color: #e4ded7;
+  background-color: #fff;
 }
 header h1 a:hover {
   color: #e4ded7;
@@ -202,7 +202,7 @@ em:first-child:first-letter {
 
 blockquote {
   color: #716558;
-  font-size: 1.2em;
+  font-size: 2em;
   line-height: 1.4em;
   text-align: center;
 /*  background-color: #ccc;*/
@@ -214,7 +214,7 @@ blockquote {
 }
 blockquote p:first-child:first-letter {
 	font-weight: 900;
-	font-size: 2em;
+	font-size: 2.4em;
 }
 
 footer {
@@ -223,16 +223,9 @@ footer {
   letter-spacing: 0.05em;
   text-align: center;
   padding: 1em 0;
-  margin-bottom: -100px;
+  margin-top: 60px;
   background-color: #a49d9d;
   background: #a49d9d; /* Old browsers */
-  background: -moz-linear-gradient(top,  #a49d9d 0%, #e4ded7 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a49d9d), color-stop(100%,#e4ded7)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #a49d9d 0%,#e4ded7 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #a49d9d 0%,#e4ded7 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #a49d9d 0%,#e4ded7 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #a49d9d 0%,#e4ded7 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a49d9d', endColorstr='#e4ded7',GradientType=0 ); /* IE6-9 */
 }
 footer a {
   color: #837977;
