some gen stylling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 	  <h1><a href="/">GIRLS</a></h1>
 	  <h1><a href="/">COLLEGE</a></h1>
 	</div>
-	<div>
+	<div class="loc">
 	  <h2>ONITSHA</h2>
 	  <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
 	</div>
