--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,44 @@ a:hover,
 a:focus {
   background-color: #443a38;
 }
+table {
+  margin-bottom: 20px;
+  width: 100%;
+  text-align: center;
+}
+table th {
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+  padding: 4px 10px 4px 10px;
+}
+table th:last-child {
+  border-right: 0;
+}
+table th:first-child {
+  text-align: right;
+}
 table a {
   color: #998811;
+}
+table tr:first-child {
+  color: #999;
+  font-weight: 800;
+  border-bottom: 1px solid #ccc;
+}
+table tr td {
+  padding: 4px 10px 4px 10px;
+  text-align: left;
+  border-right: 1px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
+}
+table tr td:last-child {
+  border-right: 0;
+}
+table tr td:first-child {
+  color: #999;
+  text-align: right;
+  /*width: 140px;*/
 }
 /*.posts h2 {
     padding-bottom: 2px;
@@ -110,8 +146,9 @@ header h1 a:hover {
 }
 header h2 {
   font-size: 3.6em;
-  padding-top: 20px;
+  padding: 20px 0 8px 0;
   font-weight: 200;
+  color: #ccc;
 }
 header h3 {
   text-align: center;
@@ -120,7 +157,7 @@ header h3 {
   letter-spacing: 0.05em;
 }
 
-#loc {
+.loc {
   text-align: center;
 }
 .pure-menu.pure-menu-horizontal {
@@ -199,9 +236,9 @@ em {
   padding: 6px;
   /*background-color: #e4ded7;*/
   text-align: center;
-  font-size: 2em;
+  font-size: 1.4em;
   /*text-shadow: 1px 1px 1px rgba(255,255,255,0.8);*/
-  line-height: 1em;
+  line-height: 1.2em;
 }
 /*em:first-child:first-letter {
   font-weight: 900;
@@ -256,11 +293,16 @@ footer .pure-menu a:focus {
     padding: 1em;
   }
 }
+.houses {
+  display: block;
+  height: 100px;
+}
 .zinnia, .cherry, .ixora, .jasmine, .bougainvillea, .rose, .alamanda, .marigold {
   padding-left: 10px;
   float: left;
   display: block;
   width: 120px;
+  height: 16px;
   margin: 10px 10px 60px 10px;
 }
 
