--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,11 @@
 <header>
-	<div>
-	  <img src="http://fggconitsha.github.io/fggc.png">
-	</div>
-	<div>
-	  <h1><a href="/">FEDERAL</a></h1>
-	  <h1><a href="/">GOVERNMENT</a></h1>
-	  <h1><a href="/">GIRLS</a></h1>
-	  <h1><a href="/">COLLEGE</a></h1>
-	</div>
-	<div class="loc">
-	  <h2>ONITSHA</h2>
-	  <h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
-	</div>
+	<div class="pure-g">
+        <div class="pure-u-1-5">
+        <img src="http://fggconitsha.github.io/fggc.png" width="103">
+        </div>
+        <div class="pure-u-4-5">
+            <h1>FEDERAL GOVERNMENT GIRLS' COLLEGE ONITSHA</h1>
+			<h3>ALUMNI ASSOCIATION - USA / CANADA</h3>
+        </div>
+    </div>
 </header>
